Fixed header size on smaller screens

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ hr {
     text-align: center;
     font-family: "Orange Typewriter", serif;
     font-weight: bold;
-    font-size: 65px;
+    font-size: 60px;
 }
 
 .info {
